レイアウト修正

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="content">
         <img class="content-img" src="img/firstview.jpg">
         <div class="content-ttl">
-            <p class="content-ttl1">commit to the <span class="content-ttl-groen"> growth</span> for everyone</p>
+            <p class="content-ttl1">commit to the <span class="content-ttl-groen"> growth</span> <br>for everyone</p>
             <p class="content-subttl">全ての人の<span>成長</span>にコミットする</p>
             <p class="content-enttl">Educational Techonology Company<br>estra inc since 2019</p>
         </div>   
