css演習問題再提出

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <p class="section-blog">Blog</p>
                 <h2 class="section-ttl4">ブログ</h2>
                 <div class="cards">
-                    <div class="card">
+                    <li class="card">
                         <p class="card-deco">Blog</p>
                         <img class="card-img" src="img/blog__first.jpg" alt="">
                         <p class="card-text">プログラミング学習の勉強方法を特集。挫折しない秘訣とは？</p>
@@ -117,8 +117,8 @@
                             <p class="card-date">2021/01/01</p>
                             <p class="card-hashtag">#COACHTECH</p>
                         </div>
-                    </div>
-                    <div class="card">
+                    </li>
+                    <li class="card">
                         <p class="card-deco">Blog</p>
                         <img class="card-img" src="img/blog__first.jpg" alt="">
                         <p class="card-text">プログラミング学習の勉強方法を特集。挫折しない秘訣とは？</p>
@@ -126,8 +126,8 @@
                             <p class="card-date">2021/01/01</p>
                             <p class="card-hashtag">#COACHTECH</p>
                         </div>
-                    </div>
-                    <div class="card">
+                    </li>
+                    <li class="card">
                         <p class="card-deco">Blog</p>
                         <img class="card-img" src="img/blog__first.jpg" alt="">
                         <p class="card-text">プログラミング学習の勉強方法を特集。挫折しない秘訣とは？</p>
@@ -135,7 +135,7 @@
                             <p class="card-date">2021/01/01</p>
                             <p class="card-hashtag">#COACHTECH</p>
                         </div>
-                    </div>
+                    </li>
                 </div>
                 <p class="blog-allpage"><a class="blog-allpage-link" href="">一覧ページへ</a></p>
             </section>
@@ -182,10 +182,14 @@
         </div>
         <P class="infor-text">株式会社estraへのお問い合わせはこちらから</P>
         <div class="infor-hor"></div>
-        <span class="infor-btn">
-            <a class="infor-btn-link" href="">お問い合わせ</a>
-        </span>
-        <small>Copyright &copy; estra,inc All Right Reserved</small>
+        <div class="button-wrapper">
+            <button class="infor-btn">
+                <a class="infor-btn-link" href="">お問い合わせ</a>
+            </button>
+        </div> 
+        <p class="infor-cr">
+            <small>Copyright &copy; estra,inc All Right Reserved</small>
+        </p>
     </footer>
 </body>
 </html>
